...
              }}>
              <Image
                style={{height: '100%', width: '100%', overflow: 'visible'}}
                source={Edit_Icon}
              />
            </TouchableOpacity>
            <Title style={{alignSelf: 'center'}} testID="firestoreName">
              {userData?.firstName}{' '}
            </Title>
          </Card.Content>
        </Card>

        {/* BIO CARD */}
...
            />
          </Card.Content>
        </Card>
        <Card style={{margin: '2%', marginBottom: '10%'}}>
          <Card.Actions style={{justifyContent: 'space-around'}}>
            <CloseButton
              testID="signOutButton"
              onPress={() => {
                signOut().then(() => {
                  dispatch(updateRoleSpecificSessions([]));
                  dispatch(updateSessions([]));
                  dispatch(updateFirestoreUserData({}));
                });
...
