...
          options={{tabBarTestID: 'navigate-to-create-session'}}
        />

        <BottomTabs.Screen
          name="Profile"
          component={ProfileNavigator}
          options={{tabBarTestID: 'navigate-to-profile-button'}}
          s
        />
      </BottomTabs.Navigator>
    </NavigationContainer>
  );
};
...
