...
    console.log(sessions);
  }, []);

  return (
    <View>
      <Text>Profile</Text>
      <Text testID="upcoming-sessions-title">Upcoming sessions</Text>
      <ConfirmButton
        testID="modalButton"
        title="Modal"
        onPress={() => setVisible((visible) => !visible)}></ConfirmButton>
      <ChoicePopup
        testID="choicePopup"
        visible={visible}
        setVisible={setVisible}></ChoicePopup>
      <FlatList
        testID={'SessionsList'}
        data={sessions}
        renderItem={({item}) => (
          <View testID={'SessionsListItem'} id={item.ID}>
            <Text> {item.Beach} </Text>
            <Text> {item.Description} </Text>
            <Text> {item.Beach} </Text>
...
